feat: (domain) added references for ayanamsha's.

--- a/locales/de.json
+++ b/locales/de.json
@@ -50,6 +50,47 @@
 "m_res_proj_search" : "Projekt suchen",
 "m_research_data" : "Forschungsdaten",
 "m_research_projects" : "Forschungsprojekte",
+"r_ay_aldebaran15tau" : "Aldebaran 15 Stier",
+"r_ay_aryabhata" : "Aryabhata",
+"r_ay_aryabhatameansun" : "Aryabhata Mittlere Sonne",
+"r_ay_aryabhata522" : "Aryabhata 522",
+"r_ay_bhasin" : "Bhasin",
+"r_ay_britton" : "Britton",
+"r_ay_b1950" : "B1950",
+"r_ay_deluce" : "DeLuce",
+"r_ay_dhruva" : "Dhruva",
+"r_ay_djwhalkhul" : "Djwhal Khul",
+"r_ay_etapiscium" : "Eta Piscium",
+"r_ay_fagan" : "Fagan",
+"r_ay_galcentbrand" : "Galaktisches Zentrum (Brand)",
+"r_ay_galcentiau1958" : "Galaktisches Zentrum IAU 1958",
+"r_ay_galcent0cap" : "Galaktisches Zentrum 0 Steinbock",
+"r_ay_galcent0sag" : "Galaktisches Zentrum 0 Schütze",
+"r_ay_galequator" : "Galaktischer Äquator",
+"r_ay_galequatormidmula" : "Galaktischer Äquator Mid Mula",
+"r_ay_hipparchus" : "Hipparch",
+"r_ay_huber" : "Huber",
+"r_ay_j1900" : "J1900",
+"r_ay_j2000" : "J2000",
+"r_ay_krishnamurti" : "Krishnamurti",
+"r_ay_kugler1" : "Kugler (Version 1)",
+"r_ay_kugler2" : "Kugler (Version 2)",
+"r_ay_kugler3" : "Kugler (Version 3)",
+"r_ay_lahiri" : "Lahiri",
+"r_ay_none" : "Keine (Tropischer Tierkreis)",
+"r_ay_raman" : "Raman",
+"r_ay_sassanian" : "Sassanian",
+"r_ay_skydram" : "Skydram",
+"r_ay_sscitra" : "Ss Citra",
+"r_ay_ssrevati" : "Ss Revati",
+"r_ay_suryasiddhanta" : "SuryaSiddhanta",
+"r_ay_suryasiddhantameansun" : "SuryaSiddhanta Mittlere Sonne",
+"r_ay_truecitrapaksha" : "Wahre Citrapaksha",
+"r_ay_truemula" : "Wahre Mula",
+"r_ay_truepushya" : "Wahre Pushya",
+"r_ay_truerevati" : "Wahre Revati",
+"r_ay_ushashashi" : "UshaShashi",
+"r_ay_yukteshwar" : "Yukteshwar",
 "r_cal_gregorian" : "Gregorianisch",
 "r_cal_julian_ce" : "Julianisch n. Chr.",
 "r_cal_julian_bce" : "Julianisch v. Chr.",
@@ -114,6 +155,9 @@
 "r_cp_mc": "MC",
 "r_cp_eastpoint": "Ostpunkt",
 "r_cp_vertex": "Vertex",
+"r_cs_ecliptical" : "Ekliptisch",
+"r_cs_equatoriaal" : "Äquatorial",
+"r_cs_horizontal" : "Horizontal",
 "r_hs_none" : "Keine Häuser",
 "r_hs_placidus" : "Placidus",
 "r_hs_koch" : "Koch",
@@ -139,6 +183,11 @@
 "r_hs_pullen_sd" : "Pullen SD",
 "r_hs_pullen_sr" : "Pullen SR",
 "r_hs_sripati" : "Sripati",
+"r_op_geocentric" : "Geozentrisch",
+"r_op_topocentric" : "Topozentrisch",
+"r_op_heliocentric" : "Heliozentrisch",
+"r_pt_2d" : "Standard 2d",
+"r_pt_oblique" : "Schiefe Länge (Ram)",
 "r_rr_aa" : "AA - Genau",
 "r_rr_a" : "A - Zitiert",
 "r_rr_b" : "B - (Auto)biografie",
