--- a/locales/en.json
+++ b/locales/en.json
@@ -50,6 +50,47 @@
 "m_res_proj_search" : "Search project",
 "m_research_data" : "Research data",
 "m_research_projects" : "Research projects",
+"r_ay_aldebaran15tau" : "Aldebaran 15 Taurus",
+"r_ay_aryabhata" : "Aryabhata",
+"r_ay_aryabhatameansun" : "Aryabhata Mean Sun",
+"r_ay_aryabhata522" : "Aryabhata 522",
+"r_ay_bhasin" : "Bhasin",
+"r_ay_britton" : "Britton",
+"r_ay_b1950" : "B1950",
+"r_ay_deluce" : "DeLuce",
+"r_ay_dhruva" : "Dhruva",
+"r_ay_djwhalkhul" : "Djwhal Khul",
+"r_ay_etapiscium" : "Eta Piscium",
+"r_ay_fagan" : "Fagan",
+"r_ay_galcentbrand" : "Galactic Center (Brand)",
+"r_ay_galcentiau1958" : "Galactic Center IAU 1958",
+"r_ay_galcent0cap" : "Galactic Center 0 Capricornus",
+"r_ay_galcent0sag" : "Galactic Center 0 Sagittarius",
+"r_ay_galequator" : "Galactic Equator",
+"r_ay_galequatormidmula" : "Galactic Equator Mid Mula",
+"r_ay_hipparchus" : "Hipparchus",
+"r_ay_huber" : "Huber",
+"r_ay_j1900" : "J1900",
+"r_ay_j2000" : "J2000",
+"r_ay_krishnamurti" : "Krishnamurti",
+"r_ay_kugler1" : "Kugler (version 1)",
+"r_ay_kugler2" : "Kugler (version 2)",
+"r_ay_kugler3" : "Kugler (version 3)",
+"r_ay_lahiri" : "Lahiri",
+"r_ay_none" : "None (Tropical zodiac)",
+"r_ay_raman" : "Raman",
+"r_ay_sassanian" : "Sassanian",
+"r_ay_skydram" : "Skydram",
+"r_ay_sscitra" : "Ss Citra",
+"r_ay_ssrevati" : "Ss Revati",
+"r_ay_suryasiddhanta" : "SuryaSiddhanta",
+"r_ay_suryasiddhantameansun" : "SuryaSiddhanta Mean Sun",
+"r_ay_truecitrapaksha" : "True Citrapaksha",
+"r_ay_truemula" : "True Mula",
+"r_ay_truepushya" : "True Pushya",
+"r_ay_truerevati" : "True Revati",
+"r_ay_ushashashi" : "UshaShashi",
+"r_ay_yukteshwar" : "Yukteshwar",
 "r_cal_gregorian" : "Gregorian",
 "r_cal_julian_ce" : "Julian CE",
 "r_cal_julian_bce" : "Julian BCE",
@@ -114,6 +155,9 @@
 "r_cp_mc": "MC",
 "r_cp_eastpoint": "Eastpoint",
 "r_cp_vertex": "Vertex",
+"r_cs_ecliptical" : "Ecliptical",
+"r_cs_equatoriaal" : "Equatorial",
+"r_cs_horizontal" : "Horizontal",
 "r_hs_none" : "No houses",
 "r_hs_placidus" : "Placidus",
 "r_hs_koch" : "Koch",
@@ -139,6 +183,11 @@
 "r_hs_pullen_sd" : "Pullen SD",
 "r_hs_pullen_sr" : "Pullen SR",
 "r_hs_sripati" : "Sripati",
+"r_op_geocentric" : "Geocentric",
+"r_op_topocentric" : "Topocentric",
+"r_op_heliocentric" : "Heliocentric",
+"r_pt_2d" : "Standard 2d",
+"r_pt_oblique" : "Oblique longitude (Ram)",
 "r_rr_aa" : "AA - Accurate",
 "r_rr_a" : "A - Quoted",
 "r_rr_b" : "B - (Auto)biography",
