--- a/locales/nl.json
+++ b/locales/nl.json
@@ -50,6 +50,47 @@
 "m_res_proj_search" : "Zoek project",
 "m_research_data" : "Onderzoeksdata",
 "m_research_projects" : "Onderzoeksprojecten",
+"r_ay_aldebaran15tau" : "Aldebaran 15 Stier",
+"r_ay_aryabhata" : "Aryabhata",
+"r_ay_aryabhatameansun" : "Aryabhata Gemiddelde Zon",
+"r_ay_aryabhata522" : "Aryabhata 522",
+"r_ay_bhasin" : "Bhasin",
+"r_ay_britton" : "Britton",
+"r_ay_b1950" : "B1950",
+"r_ay_deluce" : "DeLuce",
+"r_ay_dhruva" : "Dhruva",
+"r_ay_djwhalkhul" : "Djwhal Khul",
+"r_ay_etapiscium" : "Eta Piscium",
+"r_ay_fagan" : "Fagan",
+"r_ay_galcentbrand" : "Galactisch Centrum (Brand)",
+"r_ay_galcentiau1958" : "Galactisch Centtrum IAU 1958",
+"r_ay_galcent0cap" : "Galactisch Centrum 0 Steenbok",
+"r_ay_galcent0sag" : "Galactisch Centrum 0 Boogschutter",
+"r_ay_galequator" : "Galactische Equator",
+"r_ay_galequatormidmula" : "Galactische Equator Mid Mula",
+"r_ay_hipparchus" : "Hipparchus",
+"r_ay_huber" : "Huber",
+"r_ay_j1900" : "J1900",
+"r_ay_j2000" : "J2000",
+"r_ay_krishnamurti" : "Krishnamurti",
+"r_ay_kugler1" : "Kugler (versie 1)",
+"r_ay_kugler2" : "Kugler (versie 2)",
+"r_ay_kugler3" : "Kugler (versie 3)",
+"r_ay_lahiri" : "Lahiri",
+"r_ay_none" : "Geen (Tropische zodiak)",
+"r_ay_raman" : "Raman",
+"r_ay_sassanian" : "Sassanian",
+"r_ay_skydram" : "Skydram",
+"r_ay_sscitra" : "Ss Citra",
+"r_ay_ssrevati" : "Ss Revati",
+"r_ay_suryasiddhanta" : "SuryaSiddhanta",
+"r_ay_suryasiddhantameansun" : "SuryaSiddhanta Gemiddelde Zon",
+"r_ay_truecitrapaksha" : "Ware Citrapaksha",
+"r_ay_truemula" : "Ware Mula",
+"r_ay_truepushya" : "Ware Pushya",
+"r_ay_truerevati" : "Ware Revati",
+"r_ay_ushashashi" : "UshaShashi",
+"r_ay_yukteshwar" : "Yukteshwar",
 "r_cal_gregorian" : "Gregoriaans",
 "r_cal_julian_ce" : "Juliaans n. Chr.",
 "r_cal_julian_bce" : "Juliaans v. Chr.",
@@ -114,6 +155,9 @@
 "r_cp_mc": "MC",
 "r_cp_eastpoint": "Oostpunt",
 "r_cp_vertex": "Vertex",
+"r_cs_ecliptical" : "Eclipticaal",
+"r_cs_equatoriaal" : "Equatoriaal",
+"r_cs_horizontal" : "Horizontaal",
 "r_hs_none" : "Geen huizen",
 "r_hs_placidus" : "Placidus",
 "r_hs_koch" : "Koch",
@@ -139,6 +183,11 @@
 "r_hs_pullen_sd" : "Pullen SD",
 "r_hs_pullen_sr" : "Pullen SR",
 "r_hs_sripati" : "Sripati",
+"r_op_geocentric" : "Geocentrisch",
+"r_op_topocentric" : "Topocentrisch",
+"r_op_heliocentric" : "Heliocentrisch",
+"r_pt_2d" : "Standaard 2d",
+"r_pt_oblique" : "Schuine lengte (Ram)",
 "r_r_r_aa" : "AA - Accuraat",
 "r_rr_a" : "A - Geciteerd",
 "r_rr_b" : "B - (Auto)biografie",
