--- a/locales/fr.json
+++ b/locales/fr.json
@@ -50,6 +50,47 @@
 "m_res_proj_search" : "Rechercher projet",
 "m_research_data" : "Données de recherche",
 "m_research_projects" : "Projets de recherche",
+"r_ay_aldebaran15tau" : "Aldebaran 15 Taureau",
+"r_ay_aryabhata" : "Aryabhata",
+"r_ay_aryabhatameansun" : "Aryabhata Soleil moyen",
+"r_ay_aryabhata522" : "Aryabhata 522",
+"r_ay_bhasin" : "Bhasin",
+"r_ay_britton" : "Britton",
+"r_ay_b1950" : "B1950",
+"r_ay_deluce" : "DeLuce",
+"r_ay_dhruva" : "Dhruva",
+"r_ay_djwhalkhul" : "Djwhal Khul",
+"r_ay_etapiscium" : "Eta Piscium",
+"r_ay_fagan" : "Fagan",
+"r_ay_galcentbrand" : "Centre galactique (Brand)",
+"r_ay_galcentiau1958" : "Centre galactique IAU 1958",
+"r_ay_galcent0cap" : "Centre galactique 0 Capricorne",
+"r_ay_galcent0sag" : "Centre galactique 0 Sagittaire",
+"r_ay_galequator" : "Équateur galactique",
+"r_ay_galequatormidmula" : "Équateur galactique Mid Mula",
+"r_ay_hipparchus" : "Hipparque",
+"r_ay_huber" : "Huber",
+"r_ay_j1900" : "J1900",
+"r_ay_j2000" : "J2000",
+"r_ay_krishnamurti" : "Krishnamurti",
+"r_ay_kugler1" : "Kugler (version 1)",
+"r_ay_kugler2" : "Kugler (version 2)",
+"r_ay_kugler3" : "Kugler (version 3)",
+"r_ay_lahiri" : "Lahiri",
+"r_ay_none" : "Aucun (Zodiaque tropical)",
+"r_ay_raman" : "Raman",
+"r_ay_sassanian" : "Sassanian",
+"r_ay_skydram" : "Skydram",
+"r_ay_sscitra" : "Ss Citra",
+"r_ay_ssrevati" : "Ss Revati",
+"r_ay_suryasiddhanta" : "SuryaSiddhanta",
+"r_ay_suryasiddhantameansun" : "SuryaSiddhanta Soleil moyen",
+"r_ay_truecitrapaksha" : "Citrapaksha vrai",
+"r_ay_truemula" : "Mula vrai",
+"r_ay_truepushya" : "Pushya vrai",
+"r_ay_truerevati" : "Revati vrai",
+"r_ay_ushashashi" : "UshaShashi",
+"r_ay_yukteshwar" : "Yukteshwar",
 "r_cal_gregorian" : "Grégorien",
 "r_cal_julian_ce" : "Julian de notre ère",
 "r_cal_julian_bce" : "Julian avant notre ère",
@@ -114,6 +155,9 @@
 "r_cp_mc": "MC",
 "r_cp_eastpoint": "Point Est",
 "r_cp_vertex": "Vertex",
+"r_cs_ecliptical" : "Écliptique",
+"r_cs_equatoriaal" : "Équatorial",
+"r_cs_horizontal" : "Horizontal",
 "r_hs_none" : "Pas de maisons",
 "r_hs_placidus" : "Placidus",
 "r_hs_koch" : "Koch",
@@ -139,6 +183,11 @@
 "r_hs_pullen_sd" : "Pullen SD",
 "r_hs_pullen_sr" : "Pullen SR",
 "r_hs_sripati" : "Sripati",
+"r_op_geocentric" : "Geocentrique",
+"r_op_topocentric" : "Topocentrique",
+"r_op_heliocentric" : "Héliocentrique",
+"r_pt_2d" : "Standard 2d",
+"r_pt_oblique" : "Longitude oblique (Ram)",
 "r_rr_aa" : "AA - Précis",
 "r_rr_a" : "A - Cité",
 "r_rr_b" : "B - (Auto)biographie",
