feat: (domain) added references for aspects.

--- a/locales/nl.json
+++ b/locales/nl.json
@@ -50,22 +50,44 @@
 "m_res_proj_search" : "Zoek project",
 "m_research_data" : "Onderzoeksdata",
 "m_research_projects" : "Onderzoeksprojecten",
+"r_as_binovile" : "Bi-noviel (80°)",
+"r_as_biquintile" : "Bi-quintiel (144°)",
+"r_as_biseptile" : "Bi-septiel (102°51′26″)",
+"r_as_centile" : "Centiel (100°)",
+"r_as_conjunction" : "Conjunctie (0°)",
+"r_as_inconjunct" : "Inconjunct (150°)",
+"r_as_novile" : "Noviel (40°)",
+"r_as_opposition" : "Oppositie (180°)",
+"r_as_quadranovile" : "Quadranoviel (160°)",
+"r_as_quintile" : "Quintiel (72°)",
+"r_as_semiquintile" : "Half quintiel (36°)",
+"r_as_semisextile" : "Half sextiel (30°)",
+"r_as_semisquare" : "Half vierkant (45°)",
+"r_as_septile" : "Septiel (51°25′43″)",
+"r_as_sesquiquadrate" : "Anderhalf vierkant (135°)",
+"r_as_sextile" : "Sextiel (60°)",
+"r_as_square" : "Vierkant (90°)",
+"r_as_triangle" : "Driehoek (120°)",
+"r_as_tridecile" : "Trideciel (108°)",
+"r_as_triseptile" : "Triseptiel (154°17′09″)",
+"r_as_undecile" : "Undeciel (33°)",
+"r_as_vigintile" : "Vigintiel (18°)",  
 "r_ay_aldebaran15tau" : "Aldebaran 15 Stier",
 "r_ay_aryabhata" : "Aryabhata",
-"r_ay_aryabhatameansun" : "Aryabhata Gemiddelde Zon",
 "r_ay_aryabhata522" : "Aryabhata 522",
+"r_ay_aryabhatameansun" : "Aryabhata Gemiddelde Zon",
+"r_ay_b1950" : "B1950",
 "r_ay_bhasin" : "Bhasin",
 "r_ay_britton" : "Britton",
-"r_ay_b1950" : "B1950",
 "r_ay_deluce" : "DeLuce",
 "r_ay_dhruva" : "Dhruva",
 "r_ay_djwhalkhul" : "Djwhal Khul",
 "r_ay_etapiscium" : "Eta Piscium",
 "r_ay_fagan" : "Fagan",
-"r_ay_galcentbrand" : "Galactisch Centrum (Brand)",
-"r_ay_galcentiau1958" : "Galactisch Centtrum IAU 1958",
 "r_ay_galcent0cap" : "Galactisch Centrum 0 Steenbok",
 "r_ay_galcent0sag" : "Galactisch Centrum 0 Boogschutter",
+"r_ay_galcentbrand" : "Galactisch Centrum (Brand)",
+"r_ay_galcentiau1958" : "Galactisch Centtrum IAU 1958",
 "r_ay_galequator" : "Galactische Equator",
 "r_ay_galequatormidmula" : "Galactische Equator Mid Mula",
 "r_ay_hipparchus" : "Hipparchus",
@@ -91,101 +113,101 @@
 "r_ay_truerevati" : "Ware Revati",
 "r_ay_ushashashi" : "UshaShashi",
 "r_ay_yukteshwar" : "Yukteshwar",
-"r_cal_gregorian" : "Gregoriaans",
-"r_cal_julian_ce" : "Juliaans n. Chr.",
-"r_cal_julian_bce" : "Juliaans v. Chr.",
 "r_cal_astronomical" : "Astronomisch",
-"r_cc_female" : "Vrouw",
-"r_cc_male" : "Man",
-"r_cc_event" : "Gebeurtenis",
-"r_cc_horary" : "Uurhoek",
+"r_cal_gregorian" : "Gregoriaans",
+"r_cal_julian_bce" : "Juliaans v. Chr.",
+"r_cal_julian_ce" : "Juliaans n. Chr.",
 "r_cc_election" : "Electie",
+"r_cc_event" : "Gebeurtenis",
+"r_cc_female" : "Vrouw",
+"r_cc_horary" : "Uurhoek",
+"r_cc_male" : "Man",
 "r_cc_other" : "Anders",
 "r_cc_unknown" : "Onbekend",
-"r_cp_sun": "Zon",
-"r_cp_moon": "Maan",
-"r_cp_mercury": "Mercurius",
-"r_cp_venus": "Venus",
+"r_cp_admetos_ura": "Admetos (Hamburg)",
+"r_cp_apogee_corrected": "Gecorrigeerd apogeum",
+"r_cp_apogee_duval": "Gecorrigeerd apogeum (Duval)",
+"r_cp_apogee_interpolated": "Geïnterpoleerd apogeum",
+"r_cp_apogee_mean": "Gemiddeld apogeum",
+"r_cp_apollon_ura": "Apollon (Hamburg)",
+"r_cp_ascendant": "Ascendant",
+"r_cp_astraea": "Astraea",
+"r_cp_ceres": "Ceres",
+"r_cp_chiron": "Chiron",
+"r_cp_cupido_ura": "Cupido (Hamburg)",
+"r_cp_demeter_ram": "Demeter (Ram)",
 "r_cp_earth": "Aarde",
-"r_cp_mars": "Mars",
+"r_cp_eastpoint": "Oostpunt",
+"r_cp_eris": "Eris",
+"r_cp_hades_ura": "Hades (Hamburg)",
+"r_cp_haumea": "Haumea",
+"r_cp_hermes_ram": "Hermes (Ram)",
+"r_cp_huya": "Huya",
+"r_cp_hygieia": "Hygieia",
+"r_cp_isis": "Isis",
+"r_cp_ixion": "Ixion",
+"r_cp_juno": "Juno",
 "r_cp_jupiter": "Jupiter",
-"r_cp_saturn": "Saturnus",
-"r_cp_uranus": "Uranus",
+"r_cp_kronos_ura": "Kronos (Hamburg)",
+"r_cp_makemake": "Makemake",
+"r_cp_mars": "Mars",
+"r_cp_mc": "MC",
+"r_cp_mercury": "Mercurius",
+"r_cp_moon": "Maan",
 "r_cp_neptune": "Neptunus",
-"r_cp_pluto": "Pluto",
+"r_cp_nessus": "Nessus",
 "r_cp_node_mean": "Gemiddelde knoop",
 "r_cp_node_true": "Ware knoop",
-"r_cp_chiron": "Chiron",
-"r_cp_persephone_ram": "Persephone (Ram)",
-"r_cp_hermes_ram": "Hermes (Ram)",
-"r_cp_demeter_ram": "Demeter (Ram)",
-"r_cp_cupido_ura": "Cupido (Hamburg)",
-"r_cp_hades_ura": "Hades (Hamburg)",
-"r_cp_zeus_ura": "Zeus (Hamburg)",
-"r_cp_kronos_ura": "Kronos (Hamburg)",
-"r_cp_apollon_ura": "Apollon (Hamburg)",
-"r_cp_admetos_ura": "Admetos (Hamburg)",
-"r_cp_vulcanus_ura": "Vulcanus (Hamburg)",
-"r_cp_poseidon_ura": "Poseidon (Hamburg)",
-"r_cp_eris": "Eris",
-"r_cp_pholus": "Pholus",
-"r_cp_ceres": "Ceres",
-"r_cp_pallas": "Pallas",
-"r_cp_juno": "Juno",
-"r_cp_vesta": "Vesta",
-"r_cp_isis": "Isis",
-"r_cp_nessus": "Nessus",
-"r_cp_huya": "Huya",
-"r_cp_varuna": "Varuna",
-"r_cp_ixion": "Ixion",
-"r_cp_quaoar": "Quaoar",
-"r_cp_haumea": "Haumea",
 "r_cp_orcus": "Orcus",
-"r_cp_makemake": "Makemake",
-"r_cp_sedna": "Sedna",
-"r_cp_hygieia": "Hygieia",
-"r_cp_astraea": "Astraea",
-"r_cp_apogee_mean": "Gemiddeld apogeum",
-"r_cp_apogee_corrected": "Gecorrigeerd apogeum",
-"r_cp_apogee_interpolated": "Geïnterpoleerd apogeum",
-"r_cp_apogee_duval": "Gecorrigeerd apogeum (Duval)",
+"r_cp_pallas": "Pallas",
 "r_cp_persephone_carteret": "Persephone (Carteret)",
-"r_cp_vulcanus_carteret": "Vulcanus (Carteret)",
-"r_cp_ascendant": "Ascendant",
-"r_cp_mc": "MC",
-"r_cp_eastpoint": "Oostpunt",
+"r_cp_persephone_ram": "Persephone (Ram)",
+"r_cp_pholus": "Pholus",
+"r_cp_pluto": "Pluto",
+"r_cp_poseidon_ura": "Poseidon (Hamburg)",
+"r_cp_quaoar": "Quaoar",
+"r_cp_saturn": "Saturnus",
+"r_cp_sedna": "Sedna",
+"r_cp_sun": "Zon",
+"r_cp_uranus": "Uranus",
+"r_cp_varuna": "Varuna",
+"r_cp_venus": "Venus",
 "r_cp_vertex": "Vertex",
+"r_cp_vesta": "Vesta",
+"r_cp_vulcanus_carteret": "Vulcanus (Carteret)",
+"r_cp_vulcanus_ura": "Vulcanus (Hamburg)",
+"r_cp_zeus_ura": "Zeus (Hamburg)",
 "r_cs_ecliptical" : "Eclipticaal",
 "r_cs_equatoriaal" : "Equatoriaal",
 "r_cs_horizontal" : "Horizontaal",
-"r_hs_none" : "Geen huizen",
-"r_hs_placidus" : "Placidus",
-"r_hs_koch" : "Koch",
-"r_hs_porphyri" : "Porphyrius",
-"r_hs_regiomontanus" : "Regiomontanus",
-"r_hs_campanus" : "Campanus",
 "r_hs_alcabitius" : "Alcabitius",
-"r_hs_topocentric" : "Topocentrisch",
-"r_hs_krusinski" : "Krusinski",
 "r_hs_apc" : "APC",
-"r_hs_morin" : "Morinus",
-"r_hs_wholesign" : "Hele tekens",
+"r_hs_axial" : "Axiaal",
+"r_hs_campanus" : "Campanus",
+"r_hs_carter" : "Carter",
+"r_hs_equalaries" : "Ram gelijk",
 "r_hs_equalasc" : "Asc. gelijk",
 "r_hs_equalmc" : "MC gelijk",
-"r_hs_equalaries" : "Ram gelijk",
-"r_hs_vehlow" : "Vehlow",
-"r_hs_axial" : "Axiaal",
-"r_hs_horizon" : "Horizon",
-"r_hs_carter" : "Carter",
 "r_hs_gauquelin" : "Gauquelin",
-"r_hs_sunshine" : "Zonneschijn",
-"r_hs_sunshine_treindl" : "Zonneschijn Treindl",
+"r_hs_horizon" : "Horizon",
+"r_hs_koch" : "Koch",
+"r_hs_krusinski" : "Krusinski",
+"r_hs_morin" : "Morinus",
+"r_hs_none" : "Geen huizen",
+"r_hs_placidus" : "Placidus",
+"r_hs_porphyri" : "Porphyrius",
 "r_hs_pullen_sd" : "Pullen SD",
 "r_hs_pullen_sr" : "Pullen SR",
+"r_hs_regiomontanus" : "Regiomontanus",
 "r_hs_sripati" : "Sripati",
+"r_hs_sunshine" : "Zonneschijn",
+"r_hs_sunshine_treindl" : "Zonneschijn Treindl",
+"r_hs_topocentric" : "Topocentrisch",
+"r_hs_vehlow" : "Vehlow",
+"r_hs_wholesign" : "Hele tekens",
 "r_op_geocentric" : "Geocentrisch",
-"r_op_topocentric" : "Topocentrisch",
 "r_op_heliocentric" : "Heliocentrisch",
+"r_op_topocentric" : "Topocentrisch",
 "r_pt_2d" : "Standaard 2d",
 "r_pt_oblique" : "Schuine lengte (Ram)",
 "r_r_r_aa" : "AA - Accuraat",
@@ -193,72 +215,72 @@
 "r_rr_b" : "B - (Auto)biografie",
 "r_rr_c" : "C - Pas op, geen bron",
 "r_rr_dd" : "DD - Vuile data",
+"r_rr_unknown" : "Onbekend",
 "r_rr_x" : "X - Geen geboortetijd",
 "r_rr_xx" : "XX - Geen geboortedatum",
-"r_rr_unknown" : "Onbekend",
-"r_tz_ut" : "+00:00: UT/Universele Tijd, GT Greenwich Tijd",
-"r_tz_cet" : "+01:00: CET/Centraal Europese Tijd",
-"r_tz_eet" : "+02:00: OET/Oost Europese Tijd",
-"r_tz_eat" : "+03:00: OAT/Oost Afrikaanse Tijd, TRT/Turkse Tijd",
-"r_tz_irst" : "+03:30: IRST/Iran Standaard Tijd",
-"r_tz_amt" : "+04:00: AMT/Armenië Tijd, MUT/Mauritius Tijd",
-"r_tz_aft" : "+04:30: AFT/Afghanistan Tijd",
-"r_tz_pkt" : "+05:00: PKT/Pakistan Standaard Tijdme, ORAT/Oral Tijd",
-"r_tz_ist" : "+05:30: IST/India Standaard Tijd",
-"r_tz_iot" : "+06:00: IOT/India Chagos Tijd, OMST/Omsk Tijd",
-"r_tz_mmt" : "+06:30: MMT/Myanmar Standaard Tijd",
-"r_tz_ict" : "+07:00: ICT/Indochina Tijd",
-"r_tz_wst" : "+08:00: WST/Westerse Standaard Tijd, CST/China Standaard Tijd",
-"r_tz_jst" : "+09:00: JST/Japanse Standaard Tijd",
 "r_tz_acst" : "+09:30: ACST/Australische Centrale Standaard Tijd",
 "r_tz_aest" : "+10:00: AEST/Australische Oosterse Standaard Tijd",
-"r_tz_lhst" : "+10:30: LHST/Lord Howe Standaard Tijd",
-"r_tz_nct" : "+11:00: NCT/Nieuw Caledonië Tijd",
-"r_tz_nzst" : "+12:00: NZST/Nieuw Zeeland Standaard Tijd",
-"r_tz_sst" : "-11:00: SST/Samoa Standaard Tijd",
-"r_tz_hast" : "-10:00: HAST/Hawaii-Aleoeten Standaard Tijd",
-"r_tz_mart" : "-09:30: MART/Marquesas Eilanden Tijd",
+"r_tz_aft" : "+04:30: AFT/Afghanistan Tijd",
 "r_tz_akst" : "-09:00: AKST/Alaska Standaard Tijd",
-"r_tz_pst" : "-08:00: PST/Pacific Standaard Tijd",
-"r_tz_mst" : "-07:00: MST/Mountain Standaard Tijd",
-"r_tz_cst" : "-06:00: CST/Central Standaard Tijd",
-"r_tz_est" : "-05:00: EST/Eastern Standaard Tijd",
+"r_tz_amt" : "+04:00: AMT/Armenië Tijd, MUT/Mauritius Tijd",
 "r_tz_ast" : "-04:00: AST Atlantische Standaard Tijd",
-"r_tz_nst" : "-03:30: NST/Newfoundland Standaard Tijd",
-"r_tz_brt" : "-03:00: BRT/Brazilië Tijd, ART/Argentinië Tijd",
-"r_tz_gst" : "-02:00: GST/Zuid Georgië Tijd",
 "r_tz_azot" : "-01:00: AZOT/Azoren Standaard Tijd",
+"r_tz_brt" : "-03:00: BRT/Brazilië Tijd, ART/Argentinië Tijd",
+"r_tz_cet" : "+01:00: CET/Centraal Europese Tijd",
+"r_tz_cst" : "-06:00: CST/Central Standaard Tijd",
+"r_tz_eat" : "+03:00: OAT/Oost Afrikaanse Tijd, TRT/Turkse Tijd",
+"r_tz_eet" : "+02:00: OET/Oost Europese Tijd",
+"r_tz_est" : "-05:00: EST/Eastern Standaard Tijd",
+"r_tz_gst" : "-02:00: GST/Zuid Georgië Tijd",
+"r_tz_hast" : "-10:00: HAST/Hawaii-Aleoeten Standaard Tijd",
+"r_tz_ict" : "+07:00: ICT/Indochina Tijd",
+"r_tz_iot" : "+06:00: IOT/India Chagos Tijd, OMST/Omsk Tijd",
+"r_tz_irst" : "+03:30: IRST/Iran Standaard Tijd",
+"r_tz_ist" : "+05:30: IST/India Standaard Tijd",
+"r_tz_jst" : "+09:00: JST/Japanse Standaard Tijd",
+"r_tz_lhst" : "+10:30: LHST/Lord Howe Standaard Tijd",
 "r_tz_lmt" : "MPT: Middelbaar Plaatselijke Tijd",
-"v_calc_jd_title" : "Berekene het Juliaanse dagnummer",
-"v_calc_jd_date" : "Datum (jjjj/mm/dd)",
-"v_calc_jd_time" : "Tijd (uu:mm:ss in UT)",
-"v_calc_jd_calendar" : "Kalender",
-"v_calc_jd_result" : "Resultaat van de berekening",
-"v_calc_jd_error" : "Corrigeer s.v.p. de invoer",
+"r_tz_mart" : "-09:30: MART/Marquesas Eilanden Tijd",
+"r_tz_mmt" : "+06:30: MMT/Myanmar Standaard Tijd",
+"r_tz_mst" : "-07:00: MST/Mountain Standaard Tijd",
+"r_tz_nct" : "+11:00: NCT/Nieuw Caledonië Tijd",
+"r_tz_nst" : "-03:30: NST/Newfoundland Standaard Tijd",
+"r_tz_nzst" : "+12:00: NZST/Nieuw Zeeland Standaard Tijd",
+"r_tz_pkt" : "+05:00: PKT/Pakistan Standaard Tijdme, ORAT/Oral Tijd",
+"r_tz_pst" : "-08:00: PST/Pacific Standaard Tijd",
+"r_tz_sst" : "-11:00: SST/Samoa Standaard Tijd",
+"r_tz_ut" : "+00:00: UT/Universele Tijd, GT Greenwich Tijd",
+"r_tz_wst" : "+08:00: WST/Westerse Standaard Tijd, CST/China Standaard Tijd",
 "v_calc_jd_btncalc" : "Bereken JD",
-"v_input_radix_title" : "Gegevens nieuwe horoscoop",
-"v_input_radix_name" : "Naam of id",
-"v_input_radix_description" : "Beschrijving",
-"v_input_radix_source" : "Bron",
-"v_input_radix_rating" : "Rating",
+"v_calc_jd_calendar" : "Kalender",
+"v_calc_jd_date" : "Datum (jjjj/mm/dd)",
+"v_calc_jd_error" : "Corrigeer s.v.p. de invoer",
+"v_calc_jd_result" : "Resultaat van de berekening",
+"v_calc_jd_time" : "Tijd (uu:mm:ss in UT)",
+"v_calc_jd_title" : "Berekene het Juliaanse dagnummer",
+"v_input_radix_calc" : "Bereken horoscoop",
+"v_input_radix_calendar" : "Kalender",
 "v_input_radix_catchart" : "Categorie",
-"v_input_radix_locname" : "Locatie",
 "v_input_radix_country" : "Land",
-"v_input_radix_map" : "Kaart",
-"v_input_radix_geolong" : "Geografische lengte",
-"v_input_radix_geolong_placeholder" : "ggg:mm:ss e (w voor west)",
-"v_input_radix_geolat" : "Geografische breedte (gg:mm:ss)",
-"v_input_radix_geolat_placeholder" : "gg:mm:ss n (z voor zuid)",
 "v_input_radix_date" : "Datum",
 "v_input_radix_date_placeholder" : "jjjj/mm/dd",
-"v_input_radix_calendar" : "Kalender",
-"v_input_radix_yearcount" : "Jaartelling",
+"v_input_radix_description" : "Beschrijving",
+"v_input_radix_dst" : "Zomertijd",
+"v_input_radix_geolat" : "Geografische breedte (gg:mm:ss)",
+"v_input_radix_geolat_placeholder" : "gg:mm:ss n (z voor zuid)",
+"v_input_radix_geolong" : "Geografische lengte",
+"v_input_radix_geolong_placeholder" : "ggg:mm:ss e (w voor west)",
+"v_input_radix_geolonglmt" : "Lengte voor MPT",
+"v_input_radix_locname" : "Locatie",
+"v_input_radix_map" : "Kaart",
+"v_input_radix_name" : "Naam of id",
+"v_input_radix_rating" : "Rating",
+"v_input_radix_source" : "Bron",
 "v_input_radix_time" : "Tijd",
 "v_input_radix_time_placeholder" : "uu:mm:ss",
 "v_input_radix_timezone" : "Tijdzone",
-"v_input_radix_dst" : "Zomertijd",
-"v_input_radix_geolonglmt" : "Lengte voor MPT",
-"v_input_radix_calc" : "Bereken horoscoop",
+"v_input_radix_title" : "Gegevens nieuwe horoscoop",
+"v_input_radix_yearcount" : "Jaartelling",
 "v_main_language_changed" : "De taal is veranderd. Herstart Enigma om de nieuwe taal te gebruiken.",
 "v_main_language_changed_title" : "Taal gewijzigd"
 }
