feat: (domain): added iota for signs and functionality to include texts and glyphs.

--- a/locales/de.json
+++ b/locales/de.json
@@ -218,6 +218,18 @@
   "r_rr_unknown": "Unbekannt",
   "r_rr_x": "X - Keine Geburtszeit",
   "r_rr_xx": "XX - Keine Geburtsdatum",
+  "r_si_aries" : "Widder",
+  "r_si_taurus" : "Stier",
+  "r_si_gemini" : "Zwillinge",
+  "r_si_cancer" : "Krebs",
+  "r_si_leo" : "Löwe",
+  "r_si_vigro" : "Jungfrau",
+  "r_si_libra" : "Waage",
+  "r_si_scorpio" : "Skorpion",
+  "r_si_sagittarius" : "Schütze",
+  "r_si_capricorn" : "Steinbock",
+  "r_si_aquarius" : "Wassermann",
+  "r_si_pisces" : "Fische",
   "r_tz_acst": "+09:30: ACST/Australische Zentralstandardzeit",
   "r_tz_aest": "+10:00: AEST/Australische Oststandardzeit",
   "r_tz_aft": "+04:30: AFT/Afghanistan Zeit",
