--- a/locales/en.json
+++ b/locales/en.json
@@ -218,6 +218,18 @@
   "r_rr_unknown": "Unknown",
   "r_rr_x": "X - No birth time",
   "r_rr_xx": "XX - No birth date",
+  "r_si_aries" : "Aries",
+  "r_si_taurus" : "Taurus",
+  "r_si_gemini" : "Gemini",
+  "r_si_cancer" : "Cancer",
+  "r_si_leo" : "Leo",
+  "r_si_vigro" : "Virgo",
+  "r_si_libra" : "Libra",
+  "r_si_scorpio" : "Scorpio",
+  "r_si_sagittarius" : "Sagittarius",
+  "r_si_capricorn" : "Capricorn",
+  "r_si_aquarius" : "Aquarius",
+  "r_si_pisces" : "Pisces",
   "r_tz_acst": "+09:30: ACST/Australian Central Standard Time",
   "r_tz_aest": "+10:00: AEST/Australian Eastern Standard Time",
   "r_tz_aft": "+04:30: AFT/Afghanistan Time",
