--- a/locales/fr.json
+++ b/locales/fr.json
@@ -218,6 +218,18 @@
   "r_rr_unknown": "Inconnu",
   "r_rr_x": "X - Pas d'heure de naissance",
   "r_rr_xx": "XX - Pas de date de naissance",
+  "r_si_aries" : "Bélier",
+  "r_si_taurus" : "Taureau",
+  "r_si_gemini" : "Gémeaux",
+  "r_si_cancer" : "Cancer",
+  "r_si_leo" : "Lion",
+  "r_si_vigro" : "Vierge",
+  "r_si_libra" : "Balance",
+  "r_si_scorpio" : "Scorpion",
+  "r_si_sagittarius" : "Sagittaire",
+  "r_si_capricorn" : "Capricorne",
+  "r_si_aquarius" : "Verseau",
+  "r_si_pisces" : "Poissons",
   "r_tz_acst": "+09:30: ACST/Heure Standard Centrale d'Australie",
   "r_tz_aest": "+10:00: AEST/Heure Standard de l'Est Australien",
   "r_tz_aft": "+04:30: AFT/Heure d'Afghanistan",
