--- a/locales/nl.json
+++ b/locales/nl.json
@@ -218,6 +218,18 @@
   "r_rr_unknown": "Onbekend",
   "r_rr_x": "X - Geen geboortetijd",
   "r_rr_xx": "XX - Geen geboortedatum",
+  "r_si_aries" : "Ram",
+  "r_si_taurus" : "Stier",
+  "r_si_gemini" : "Tweelingen",
+  "r_si_cancer" : "Kreeft",
+  "r_si_leo" : "Leeuw",
+  "r_si_vigro" : "Maagd",
+  "r_si_libra" : "Weegschaal",
+  "r_si_scorpio" : "Schorpioen",
+  "r_si_sagittarius" : "Boogschutter",
+  "r_si_capricorn" : "Steenbok",
+  "r_si_aquarius" : "Waterman",
+  "r_si_pisces" : "Vissen",
   "r_tz_acst": "+09:30: ACST/Australische Centrale Standaard Tijd",
   "r_tz_aest": "+10:00: AEST/Australische Oosterse Standaard Tijd",
   "r_tz_aft": "+04:30: AFT/Afghanistan Tijd",
