Created default config and configdelta.

--- a/locales/en.json
+++ b/locales/en.json
@@ -208,6 +208,16 @@
   "r_op_geocentric": "Geocentric",
   "r_op_heliocentric": "Heliocentric",
   "r_op_topocentric": "Topocentric",
+  "r_prog_prkey_brahe": "Brahe",
+  "r_prog_prkey_naibod": "Naibod",
+  "r_prog_prkey_placidus": "Placidus",
+  "r_prog_prkey_ptolemy": "Ptolemy",
+  "r_prog_prkey_vandam": "van Dam",
+  "r_prog_prmethod_placidus": "Placidus",
+  "r_prog_prmethod_regiomontanus": "Regiomontanus",
+  "r_prog_smkey_onedegree": "1 degree",
+  "r_prog_smkey_meansun": "Mean solar motion",
+  "r_prog_smkey_truesun": "True solar motion",
   "r_pt_2d": "Standard 2d",
   "r_pt_oblique": "Oblique longitude (Ram)",
   "r_rr_a": "A - Quoted",
