--- a/locales/nl.json
+++ b/locales/nl.json
@@ -208,6 +208,16 @@
   "r_op_geocentric": "Geocentrisch",
   "r_op_heliocentric": "Heliocentrisch",
   "r_op_topocentric": "Topocentrisch",
+  "r_prog_prkey_brahe": "Brahe",
+  "r_prog_prkey_naibod": "Naibod",
+  "r_prog_prkey_placidus": "Placidus",
+  "r_prog_prkey_ptolemy": "Ptolemaeus",
+  "r_prog_prkey_vandam": "van Dam",
+  "r_prog_prmethod_placidus": "Placidus",
+  "r_prog_prmethod_regiomontanus": "Regiomontanus",
+  "r_prog_smkey_onedegree": "1 graad",
+  "r_prog_smkey_meansun": "Gemiddelde beweging Zon",
+  "r_prog_smkey_truesun": "Werkelijke beweging Zon",
   "r_pt_2d": "Standaard 2d",
   "r_pt_oblique": "Schuine lengte (Ram)",
   "r_r_r_aa": "AA - Accuraat",
@@ -273,7 +283,7 @@
   "v_calc_jd_error": "Corrigeer s.v.p. de invoer",
   "v_calc_jd_result": "Resultaat van de berekening",
   "v_calc_jd_time": "Tijd (uu:mm:ss in UT)",
-  "v_calc_jd_title": "Berekene het Juliaanse dagnummer",
+  "v_calc_jd_title": "Bereken het Juliaanse dagnummer",
   "v_input_radix_calc": "Bereken horoscoop",
   "v_input_radix_calendar": "Kalender",
   "v_input_radix_catchart": "Categorie",
