--- a/locales/de.json
+++ b/locales/de.json
@@ -208,6 +208,16 @@
   "r_op_geocentric": "Geozentrisch",
   "r_op_heliocentric": "Heliozentrisch",
   "r_op_topocentric": "Topozentrisch",
+  "r_prog_prkey_brahe": "Brahe",
+  "r_prog_prkey_naibod": "Naibod",
+  "r_prog_prkey_placidus": "Placidus",
+  "r_prog_prkey_ptolemy": "Ptolemäus",
+  "r_prog_prkey_vandam": "van Dam",
+  "r_prog_prmethod_placidus": "Placidus",
+  "r_prog_prmethod_regiomontanus": "Regiomontanus",
+  "r_prog_smkey_onedegree": "1 Grad",
+  "r_prog_smkey_meansun": "Mittlere Sonnenbewegung",
+  "r_prog_smkey_truesun": "Wahre Sonnenbewegung",
   "r_pt_2d": "Standard 2d",
   "r_pt_oblique": "Schiefe Länge (Ram)",
   "r_rr_a": "A - Zitiert",
