--- a/locales/fr.json
+++ b/locales/fr.json
@@ -208,6 +208,16 @@
   "r_op_geocentric": "Geocentrique",
   "r_op_heliocentric": "Héliocentrique",
   "r_op_topocentric": "Topocentrique",
+  "r_prog_prkey_brahe": "Brahe",
+  "r_prog_prkey_naibod": "Naibod",
+  "r_prog_prkey_placidus": "Placidus",
+  "r_prog_prkey_ptolemy": "Ptolémée",
+  "r_prog_prkey_vandam": "van Dam",
+  "r_prog_prmethod_placidus": "Placidus",
+  "r_prog_prmethod_regiomontanus": "Regiomontanus",
+  "r_prog_smkey_onedegree": "1 degré",
+  "r_prog_smkey_meansun": "Mouvement solaire moyen",
+  "r_prog_smkey_truesun": "Mouvement solaire vrai",
   "r_pt_2d": "Standard 2d",
   "r_pt_oblique": "Longitude oblique (Ram)",
   "r_rr_a": "A - Cité",
